# AdventofCode

./: .gitignore  CMakeLists.txt  README.md  test.ml
Claude/: aoc_prompt_Python.md  aoc_prompt_Rust.md
Days/: 1.py  1.rs  10.py  11.ml  11.rs  12.py  13.py  14.py  2.java  3.R  3.py  4.cpp  4.php  4.py  5.c  6.cpp  7.php  8.py  8.rs  9.py  9.rs  PY_utils.py
Days/utils/: aoc-utils-parallel-docs.md  mod.rs
Utils/: aoc-utils-enhanced.rs
